<resources>
    <string name="app_name">Cupcakes By Isa</string>

    <!-- Main Screen !-->
    <string name="option_menu_my_site">Meu Site</string>
    <string name="option_menu_gender">Agenda</string>
    <string name="option_menu_my_clients">Clientes</string>
    <string name="option_menu_stock">Estoque</string>
    <string name="option_menu_settings">Configurações</string>
    <string name="option_menu_statistics">Estatísticas</string>
    <string name="option_menu_social_medias">Redes Sociais</string>
    <string name="option_menu_finances">Finanças</string>
    <string name="option_menu_menu">Cardápio</string>
    <string name="message_intro">Olá, você tem 2 compromissos hoje! Veja aqui quais são</string>

    <!-- Clients Screen !-->
    <string name="content_description_filter_button">Filtre sua busca</string>

    <string name="database_fault">Falha ao acessar o banco de dados, contate seu administrador ;)</string>
    <string name="title_activity_clients">Meus Clientes</string>
    <string name="title_activity_add_client">Adicionar Cliente</string>

    <!-- Add Clients !-->
    <string name="field_name">Nome</string>
    <string name="field_birthday">Aniversário</string>
    <string name="field_phonenumber">Telefone</string>
    <string name="field_facebookurl">Facebook</string>
    <string name="field_location">Localização</string>
    <string name="button_save">Salvar</string>
    <string name="button_delete">Deletar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="alert_title">Hey!</string>
    <string name="alert_message">Você pode selecionar um contato direto da sua lista!</string>
    <string name="alert_positive_message">Perfeito</string>
    <string name="alert_negative_message">Prefiro digitar</string>
    <string name="error_missing_fields">Você tem campos em branco</string>
    <string name="save_client_success_title">Ebaa!</string>
    <string name="save_client_success_message">Seu cliente foi salvo com sucesso! Quer adicionar mais?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="save_client_error_title">Erro</string>
    <string name="save_client_error_message">Erro ao salvar seu cliente, call Tuco</string>
    <string name="delete_client_confirmation">Você tem certeza que deseja deletar este cliente?</string>
    <string name="alert_title_warning">Aviso</string>
    <string name="title_activity_my_menu">MyMenu</string>
</resources>
